header: fix vertical overflow.
also fix search style bug

--- a/web/themes/custom/citizen_dart/components/03-composites/blocks/search/_search.scss
+++ b/web/themes/custom/citizen_dart/components/03-composites/blocks/search/_search.scss
@@ -253,12 +253,8 @@
 							border-radius: 4px;
 						}
 					}
-					.gsib_a{
-						padding:1px 0 0 0;
-					}
 					input.gsc-input{
 						height:48px !important;
-						padding-left:2rem !important;
 						font-size: 2rem;
 						font-family: $bodyText;
 						font-weight: $regular;
